@@ -9,7 +9,7 @@ Line 1, characters 0-75:
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 Error: The type of this class,
        class virtual ['a] c :
-         object constraint 'a = _[< `A of int & float ] end,
+         object constraint '_a = [< `A of int & float ] as '_weak1 end,
        contains non-collapsible conjunctive types in constraints.
        Type int is not compatible with type float
 |}]
