@@ -61,19 +61,18 @@ type out_type_param = string * (Asttypes.variance * Asttypes.injectivity)
 type out_type =
   | Otyp_abstract
   | Otyp_open
-  | Otyp_alias of out_type * string
+  | Otyp_alias of {non_gen:bool; aliased:out_type; alias:string}
   | Otyp_arrow of string * out_type * out_type
-  | Otyp_class of bool * out_ident * out_type list
+  | Otyp_class of out_ident * out_type list
   | Otyp_constr of out_ident * out_type list
   | Otyp_manifest of out_type * out_type
-  | Otyp_object of (string * out_type) list * bool option
+  | Otyp_object of { fields: (string * out_type) list; open_row:bool}
   | Otyp_record of (string * bool * out_type) list
   | Otyp_stuff of string
   | Otyp_sum of out_constructor list
   | Otyp_tuple of out_type list
   | Otyp_var of bool * string
-  | Otyp_variant of
-      bool * out_variant * bool * (string list) option
+  | Otyp_variant of out_variant * bool * (string list) option
   | Otyp_poly of string list * out_type
   | Otyp_module of out_ident * (string * out_type) list
   | Otyp_attribute of out_type * out_attribute
